fix scrollbars not showing up

--- a/frontend/src/assets/scss/bt/enrollment/_enrollment.scss
+++ b/frontend/src/assets/scss/bt/enrollment/_enrollment.scss
@@ -121,12 +121,6 @@
   }
 }
 
-  // hide scrollbars
-  ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
-  }
-
 
 // .enrollment-graph-card {
 //   box-shadow: none;
